# channels

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  ChannelsConfig.cmake  FetchDependencies.cmake  LICENSE  README.md  appveyor.yml  compile_flags.txt
examples/: CMakeLists.txt
examples/timer/: CMakeLists.txt  cancellation_token.h  inefficient_timer.cpp  inefficient_timer.h  main.cpp  one_thread_executor.cpp  one_thread_executor.h
include/channels/: aggregating_channel.h  buffered_channel.h  channel.h  channel_traits.h  connection.h  continuation_status.h  error.h  fwd.h  transmitter.h
include/channels/detail/: cast_view.h  cow_optional.h  future_shared_state.h  intrusive_list.h  lock_view.h  range_view.h  shared_state.h  shared_state_base.h  type_traits.h  view.h
include/channels/detail/compatibility/: apply.h  compile_features.h  functional.h  shared_mutex.h  type_traits.h  utility.h
include/channels/utility/: callback.h  connection_manager.h  executors.h  new_only_limiter.h  no_executor_limiter.h  send_once_limiter.h  sync_connection_manager.h  sync_tracker.h  transponder.h  tuple_elvis.h
src/: connection.cpp  error.cpp
src/detail/: intrusive_list.cpp  shared_state_base.cpp
src/utility/: connection_manager.cpp  sync_connection_manager.cpp  sync_tracker.cpp
tests/: CMakeLists.txt  FetchDependencies.cmake  aggregating_channel_test.cpp  buffered_channel_test.cpp  callback_test.cpp  channel_test.cpp  connection_manager_test.cpp  cow_optional_test.cpp  executors_test.cpp  new_only_limiter_test.cpp  no_executor_limiter_test.cpp  send_once_limiter_test.cpp  sync_connection_manager_test.cpp  sync_tracker_test.cpp  transponder_test.cpp  tuple_elvis_test.cpp  type_traits_test.cpp
tests/cmake/: coverage.cmake.in
tests/tools/: callbacks.cpp  callbacks.h  exception_helpers.cpp  exception_helpers.h  executor.cpp  executor.h  relation_only.h  thread_helpers.h  tracker.cpp  tracker.h
tools/: CMakeLists.txt
